data/test/regression/type_check/fail/declaration_5.v
localparam x = 0;
parameter x = 0;
